--- Auto-Git Commit ---

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -38,7 +38,7 @@
     padding: 10px;
     font-weight: 320;
     padding-bottom: 6px;
-    background-color:#F1948A ;
+    background-color:#e93219 ;
 
 } 
 .mission{
