--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ font-family: 'Playfair Display', serif;
 } */
 
 .result{
-  background-color:#FDD835  ;
+  background-color:cadetblue ;
   padding:20px;
   width: 100%;
   height: 350px;
