--- a/css/admi.css
+++ b/css/admi.css
@@ -1,7 +1,7 @@
 @import"<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">";
 
 body{
-    background-color: #EBF5FB ;
+    background-color: white ;
 }
 .head{
     font-size: 30px;
