--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ font-family: 'Playfair Display', serif;
 } */
 
 .result{
-  background-color:cadetblue ;
+  background-color:rgba(67, 233, 177, 0.897) ;
   padding:20px;
   width: 100%;
   height: 350px;
