--- a/css/acadmics.css
+++ b/css/acadmics.css
@@ -1,4 +1,3 @@
-@import"<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">";
 
 body{
     background-color: white ;
@@ -8,13 +7,13 @@ body{
     text-align: center;
     font-weight: 600;
     color: #1B4F72 ;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Volkhov', serif;
 }
 .para{
     font-size: 20px;
     text-align: justify;
     color: black;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 .facbreadcrum {
@@ -26,7 +25,7 @@ body{
     padding: 15px;
     font-weight: 1000;
     font-size: 50px;
-  font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display SC', serif;
     position: absolute;
     top: 50%;
     left: 50%;
