--- a/css/saurabhfaculty.css
+++ b/css/saurabhfaculty.css
@@ -7,7 +7,7 @@
   padding: 15px;
   font-weight: 1000;
   font-size: 50px;
-font-family: 'Playfair Display', serif;;
+  font-family: 'Playfair Display SC', serif;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -26,7 +26,7 @@ font-family: 'Playfair Display', serif;;
   text-align: center;
   font-weight: 600;
   color: black;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Volkhov', serif;
 }
 
 .containers {
