--- a/css/admi.css
+++ b/css/admi.css
@@ -7,8 +7,8 @@ body{
     font-size: 30px;
     text-align: center;
     font-weight: 600;
-    color: #1B4F72 ;
-    font-family: 'Fjalla One', sans-serif;
+    color: #031640;
+    font-family: 'Volkhov', serif;
 }
 .admsn{
 padding:40px;
@@ -19,7 +19,7 @@ padding:40px;
     font-size: 20px;
     text-align: justify;
     color: black;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 .para{
   padding-left: 60px;
@@ -27,7 +27,7 @@ padding:40px;
     font-size: 20px;
     text-align: justify;
     color: black;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 .facbreadcrum {
     position: relative;
@@ -38,7 +38,7 @@ padding:40px;
     padding: 15px;
     font-weight: 1000;
     font-size: 50px;
-  font-family: 'Playfair Display', serif;;
+    font-family: 'Playfair Display SC', serif;
     position: absolute;
     top: 50%;
     left: 50%;
