--- a/css/gallerycss.css
+++ b/css/gallerycss.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#DEF2F1 ;
+    background-color:white ;
   }
 
 .facbreadcrum {
@@ -11,7 +11,7 @@ body{
     padding: 15px;
     font-weight: 1000;
     font-size: 50px;
-  font-family: 'Playfair Display', serif;;
+    font-family: 'Playfair Display SC', serif;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -49,7 +49,8 @@ top: 88%;
 padding-left: 5px;
  width: 100%;
  height: 40px;
- color: cornsilk;
+ color: #031640;
+ font-family: 'Volkhov', serif;
  font-size: 28px;
  font-weight: bold;
 }
