--- a/css/stugal.css
+++ b/css/stugal.css
@@ -1,4 +1,3 @@
-@import"<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">";
 
 body{
     background-color: #EBF5FB ;
@@ -8,7 +7,7 @@ body{
     text-align: center;
     font-weight: 600;
     color: #1B4F72 ;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Volkhov', serif;
 }
 .facbreadcrum {
     position: relative;
@@ -19,7 +18,7 @@ body{
     padding: 15px;
     font-weight: 1000;
     font-size: 50px;
-  font-family: 'Playfair Display', serif;;
+    font-family: 'Playfair Display SC', serif;
     position: absolute;
     top: 50%;
     left: 50%;
