--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,15 @@ body{
     font-size: 30px;
     text-align: center;
     font-weight: 600;
-    color: black;
+    color: #031640;
     font-family: 'Volkhov', serif;
+}
+.head1{
+  font-size: 30px;
+  text-align: center;
+  font-weight: 600;
+  color: #c52611;
+  font-family: 'Volkhov', serif;
 }
 .para{
     font-size: 20px;
@@ -107,7 +114,7 @@ body{
     font-size: 22px;
     text-align: justify;
     color: black;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     
 }
 /* .containerrr{
@@ -183,15 +190,17 @@ body{
   width: 100%;
   height: 350px;
   overflow-y: scroll;
-  color:black;
+  color:white;
+  font-family: 'Titillium Web', sans-serif;
   
 }
 .result-name{
 padding: 5px;
 padding-top: 24px;
 padding-left: 15px;
-color: black;
+color: white;
 font-weight: 300;
+font-family: 'Titillium Web', sans-serif;
 } 
 .res-img{
 width: 80px;
